--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,13 @@ environment:
   sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
+  animated_splash_screen: ^1.3.0
   animated_text_kit: ^4.2.2
   animations: ^2.0.7
   badges: ^3.0.2
   clay_containers: ^0.3.2
-  country_picker: ^2.0.19
+  country_calling_code_picker: ^2.0.1
+  country_phone_code_picker: ^0.0.41
   csc_picker: ^0.2.6
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
@@ -34,6 +36,8 @@ dependencies:
   razorpay_flutter: ^1.3.4
   rounded_loading_button: ^2.1.0
   sizer: ^2.0.15
+  sms_autofill: ^2.2.0
+  timer_count_down: ^2.2.2
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
