--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,11 @@ environment:
   sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
-  animated_splash_screen: ^1.3.0
   animated_text_kit: ^4.2.2
   animations: ^2.0.7
   badges: ^3.0.2
   clay_containers: ^0.3.2
-  country_calling_code_picker: ^2.0.1
-  country_phone_code_picker: ^0.0.41
+  country_picker: ^2.0.19
   csc_picker: ^0.2.6
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
@@ -23,6 +21,7 @@ dependencies:
   firebase_core: ^2.4.0
   flutter:
     sdk: flutter
+  flutter_image_compress: ^1.1.3
   flutter_svg: ^2.0.0+1
   get: ^4.6.5
   get_cli: ^1.8.1
@@ -58,6 +57,7 @@ flutter:
     - assets/tourmaker.svg
     - assets/Thumbnail.png
     - assets/camera.svg
+    - assets/empty screen.png
   fonts:
     - family: TourMaker
       fonts:
