--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,17 +26,19 @@ dependencies:
   get: ^4.6.5
   get_cli: ^1.8.1
   get_storage: ^2.0.3
+  google_fonts: ^4.0.3
   image_cropper: ^3.0.1
   image_picker: ^0.8.6+1
   intl_phone_field: ^3.1.0
   pinput: ^2.2.21
   pretty_dio_logger: ^1.1.1
   provider: ^6.0.5
-  razorpay_flutter: ^1.3.4
+  razorpay_flutter: 1.3.3
   rounded_loading_button: ^2.1.0
   sizer: ^2.0.15
   sms_autofill: ^2.2.0
   timer_count_down: ^2.2.2
+  url_launcher: ^6.1.9
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
@@ -58,6 +60,10 @@ flutter:
     - assets/Thumbnail.png
     - assets/camera.svg
     - assets/empty screen.png
+    - assets/help.svg
+    - assets/feedback.svg
+    - assets/about.svg
+    - assets/no internet.png
   fonts:
     - family: TourMaker
       fonts:
