--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   animated_text_kit: ^4.2.2
   animations: ^2.0.7
+  audioplayers: ^3.0.1
   badges: ^3.0.2
   clay_containers: ^0.3.2
   country_picker: ^2.0.19
@@ -19,6 +20,7 @@ dependencies:
   firebase_app_check: ^0.1.1+8
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.0
+  firebase_messaging: ^14.2.5
   flutter:
     sdk: flutter
   flutter_image_compress: ^1.1.3
@@ -29,12 +31,14 @@ dependencies:
   google_fonts: ^4.0.3
   image_cropper: ^3.0.1
   image_picker: ^0.8.6+1
+  internet_connection_checker: ^1.0.0+1
   intl_phone_field: ^3.1.0
   pinput: ^2.2.21
   pretty_dio_logger: ^1.1.1
   provider: ^6.0.5
   razorpay_flutter: 1.3.3
   rounded_loading_button: ^2.1.0
+  scrollable_positioned_list: ^0.3.5
   sizer: ^2.0.15
   sms_autofill: ^2.2.0
   timer_count_down: ^2.2.2
@@ -63,7 +67,8 @@ flutter:
     - assets/help.svg
     - assets/feedback.svg
     - assets/about.svg
-    - assets/no internet.png
+    - assets/noInternet.png
+    - assets/typewriter-1.mp3
   fonts:
     - family: TourMaker
       fonts:
