--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,15 @@ dependencies:
   animations: ^2.0.7
   audioplayers: ^3.0.1
   badges: ^3.0.2
+  cached_network_image: ^3.2.3
   clay_containers: ^0.3.2
   country_picker: ^2.0.19
+  country_state_city: ^0.1.6
+  country_state_city_picker: ^1.2.8
   csc_picker: ^0.2.6
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
-  device_preview: ^1.1.0
-  dio: ^4.0.6
+  dio: ^5.0.1
   firebase_app_check: ^0.1.1+8
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.0
@@ -24,23 +26,31 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_image_compress: ^1.1.3
+  flutter_pdfview: ^1.2.5
+  flutter_share: ^2.0.0
+  flutter_share_me: ^1.4.0
   flutter_svg: ^2.0.0+1
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
   get: ^4.6.5
   get_cli: ^1.8.1
   get_storage: ^2.0.3
   google_fonts: ^4.0.3
+  http: ^0.13.5
   image_cropper: ^3.0.1
   image_picker: ^0.8.6+1
   internet_connection_checker: ^1.0.0+1
+  intl: ^0.17.0
   intl_phone_field: ^3.1.0
+  path_provider: ^2.0.13
   pinput: ^2.2.21
   pretty_dio_logger: ^1.1.1
   provider: ^6.0.5
   razorpay_flutter: 1.3.3
-  rounded_loading_button: ^2.1.0
-  scrollable_positioned_list: ^0.3.5
+  share_plus: ^4.0.0
   sizer: ^2.0.15
   sms_autofill: ^2.2.0
+  syncfusion_flutter_pdfviewer: ^20.4.53
   timer_count_down: ^2.2.2
   url_launcher: ^6.1.9
 dev_dependencies:
