--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,9 @@ environment:
 
 dependencies:
   animated_text_kit: ^4.2.2
-  animations: ^2.0.7
   audioplayers: ^3.0.1
-  badges: ^3.0.2
   cached_network_image: ^3.2.3
-  clay_containers: ^0.3.2
   country_picker: ^2.0.19
-  country_state_city: ^0.1.6
-  country_state_city_picker: ^1.2.8
-  csc_picker: ^0.2.6
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   date_time_picker: ^2.1.0
@@ -27,10 +21,7 @@ dependencies:
   firebase_messaging: ^14.2.5
   flutter:
     sdk: flutter
-  flutter_image_compress: ^1.1.3
-  flutter_pdfview: ^1.2.5
-  flutter_share: ^2.0.0
-  flutter_share_me: ^1.4.0
+  flutter_pdfview: ^1.3.0
   flutter_svg: ^2.0.0+1
   geocoding: ^2.1.0
   geolocator: ^9.0.2
@@ -38,29 +29,28 @@ dependencies:
   get_cli: ^1.8.1
   get_storage: ^2.0.3
   google_fonts: ^4.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^0.13.5
   http_parser: ^4.0.2
-  image: ^4.0.15
-  image_cropper: ^3.0.1
   image_picker: ^0.8.6+1
   internet_connection_checker: ^1.0.0+1
   intl: ^0.17.0
-  intl_phone_field: ^3.1.0
   path_provider: ^2.0.13
   pinput: ^2.2.21
   pretty_dio_logger: ^1.1.1
-  provider: ^6.0.5
   razorpay_flutter: 1.3.3
-  share_plus: ^4.0.0
+  shared_preferences: ^2.1.0
   sizer: ^2.0.15
   sms_autofill: ^2.2.0
-  syncfusion_flutter_pdfviewer: ^20.4.53
   timer_count_down: ^2.2.2
   url_launcher: ^6.1.9
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
 
 flutter:
   uses-material-design: true
