--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ environment:
 
 dependencies:
   animated_text_kit: ^4.2.2
-  audioplayers: ^3.0.1
+  audioplayers: ^4.0.1
   cached_network_image: ^3.2.3
+  connectivity_plus: ^3.0.4
   country_picker: ^2.0.19
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
   date_time_picker: ^2.1.0
   device_info_plus: ^8.1.0
   dio: ^5.0.1
-  esys_flutter_share_plus: ^2.2.0
   expansion_tile_card: ^2.0.0
   firebase_app_check: ^0.1.1+8
   firebase_auth: ^4.2.5
@@ -23,6 +23,7 @@ dependencies:
   firebase_messaging: ^14.2.5
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.3.0
   flutter_svg: ^2.0.0+1
   geocoding: ^2.1.0
   geolocator: ^9.0.2
@@ -37,14 +38,16 @@ dependencies:
   intl: ^0.17.0
   logger: ^1.3.0
   path_provider: ^2.0.13
+  permission_handler: ^10.2.0
   pinput: ^2.2.21
   pretty_dio_logger: ^1.1.1
-  razorpay_flutter: 1.3.3
+  razorpay_flutter: ^1.3.4
+  share: ^2.0.4
   shared_preferences: ^2.1.0
   shimmer: ^2.0.0
   sizer: ^2.0.15
   sms_autofill: ^2.2.0
-  syncfusion_flutter_pdfviewer: ^21.1.38
+  syncfusion_flutter_pdfviewer: ^21.1.39
   timer_count_down: ^2.2.2
   url_launcher: ^6.1.9
 dev_dependencies:
